feat: cks Spanish rebuilt as verified translations of the rich English - 579KB sibling corpus replaced by 2.9MB at parity (0.98x)